Added db seeding for administrator role, added Automapper, added Film controller, working on the read films functionality

--- a/MovieBarn.BusinessLogic/MovieBarn.BusinessLogic.csproj
+++ b/MovieBarn.BusinessLogic/MovieBarn.BusinessLogic.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\MovieBarn.Data\MovieBarn.Data.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Contracts\" />
+	  <Folder Include="Repositories\" />
+	</ItemGroup>
+
 </Project>
