--- a/MovieBarn.Data/MovieBarn.Data.csproj
+++ b/MovieBarn.Data/MovieBarn.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,6 +16,10 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\MovieBarn.Common\MovieBarn.Common.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Configuration\Entities\" />
   </ItemGroup>
 
 </Project>
