Finished Read films functionality

--- a/MovieBarn.BusinessLogic/MovieBarn.BusinessLogic.csproj
+++ b/MovieBarn.BusinessLogic/MovieBarn.BusinessLogic.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.11" />
@@ -17,10 +19,5 @@
 	<ItemGroup>
     <ProjectReference Include="..\MovieBarn.Data\MovieBarn.Data.csproj" />
   </ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Contracts\" />
-	  <Folder Include="Repositories\" />
-	</ItemGroup>
 
 </Project>
